[package]
name = "tty"
version = "0.1.0"
license = "MIT"
description = "A terminal library for rust "
authors = ["Ian Shehadeh <IanShehadeh2020@gmail.com>"]
homepage = "https://github.com/IanS5/tty-rs"
repository = "https://github.com/IanS5/tty-rs"


[dependencies]
nix = "0.11.0"
failure = "0.1.1"
failure_derive = "0.1.1"
terminfo = { path = "./terminfo", version = "0.1.0" }
