[package]
name = "nixterm"
version = "0.1.1"
license = "MIT"
description = "A terminal library for rust "
authors = ["Ian Shehadeh <IanShehadeh2020@gmail.com>"]
homepage = "https://github.com/IanS5/tty-rs"
repository = "https://github.com/IanS5/tty-rs"


[dependencies]
nix = "0.11.0"
failure = "0.1.1"
failure_derive = "0.1.1"

[[example]]
name = "terminfo"
path = "./examples/terminfo.rs"

[[example]]
name = "term"
path = "./examples/term.rs"

[[example]]
name = "raw"
path = "./examples/raw.rs"