[package]
name = "nixterm"
version = "0.1.2"
license = "MIT"
description = "A terminal library for rust"
authors = ["Ian Shehadeh <IanShehadeh2020@gmail.com>"]
homepage = "https://github.com/IanS5/nixterm-rs"
repository = "https://github.com/IanS5/nixterm-rs"


[dependencies]
nix = "0.11.0"
failure = "0.1.1"
failure_derive = "0.1.1"
memchr = "2.1.0"

[[example]]
name = "terminfo"
path = "./examples/terminfo.rs"

[[example]]
name = "term"
path = "./examples/term.rs"

[[example]]
name = "raw"
path = "./examples/raw.rs"